--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# package files
+yarn.lock
+package-lock.json
+
 # env files (can opt-in for committing if needed)
 .env*
 !.env.example
