--- a/package.json
+++ b/package.json
@@ -10,21 +10,21 @@
   },
   "dependencies": {
     "@farcaster/auth-kit": "^0.6.0",
-    "@farcaster/frame-core": "^0.0.22",
-    "@farcaster/frame-node": "^0.0.7",
-    "@farcaster/frame-sdk": "^0.0.26",
-    "@farcaster/frame-wagmi-connector": "^0.0.6",
+    "@farcaster/frame-core": "^0.0.29",
+    "@farcaster/frame-node": "^0.0.18",
+    "@farcaster/frame-sdk": "^0.0.31",
+    "@farcaster/frame-wagmi-connector": "^0.0.19",
     "@radix-ui/react-label": "^2.1.1",
     "@tanstack/react-query": "^5.61.0",
     "@upstash/redis": "^1.34.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
-    "next": "15.0.3",
+    "next": "15.2.2",
     "next-auth": "^4.24.11",
     "ox": "^0.4.2",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.21.55",
@@ -35,10 +35,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "15.0.3",
+    "eslint-config-next": "15.2.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  },
-  "packageManager": "yarn@4.2.2+sha512.c44e283c54e02de9d1da8687025b030078c1b9648d2895a65aab8e64225bfb7becba87e1809fc0b4b6778bbd47a1e2ab6ac647de4c5e383a53a7c17db6c3ff4b"
+  }
 }
