--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@farcaster/auth-kit": "^0.6.0",
-    "@farcaster/frame-core": "^0.0.32",
-    "@farcaster/frame-node": "^0.0.21",
-    "@farcaster/frame-sdk": "^0.0.53",
-    "@farcaster/frame-wagmi-connector": "^0.0.42",
+    "@farcaster/auth-kit": "^0.8.1",
+    "@farcaster/frame-core": "^0.0.20",
+    "@farcaster/frame-node": "^0.0.41",
+    "@farcaster/frame-sdk": "^0.0.64",
+    "@farcaster/frame-wagmi-connector": "^0.0.53",
     "@radix-ui/react-label": "^2.1.1",
     "@tanstack/react-query": "^5.61.0",
-    "@upstash/redis": "^1.34.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
-    "next": "15.3.1",
+    "next": "15.3.4",
     "next-auth": "^4.24.11",
     "ox": "^0.4.2",
     "react": "19.1.0",
@@ -35,9 +34,10 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "eslint": "^8",
-    "eslint-config-next": "15.3.1",
+    "eslint-config-next": "15.3.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "yarn@1.22.22"
 }
