--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/node": "^20",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "eruda": "^3.4.3",
     "eslint": "^8",
     "eslint-config-next": "15.3.4",
     "postcss": "^8",
