--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
   },
   "dependencies": {
     "@farcaster/auth-kit": "^0.8.1",
-    "@farcaster/frame-core": "^0.3.6",
-    "@farcaster/frame-node": "^0.1.6",
-    "@farcaster/frame-sdk": "^0.1.7",
-    "@farcaster/frame-wagmi-connector": "^1.0.0",
+    "@farcaster/miniapp-core": "^0.3.6",
+    "@farcaster/miniapp-node": "^0.1.6",
+    "@farcaster/miniapp-sdk": "^0.1.7",
     "@farcaster/miniapp-wagmi-connector": "^1.0.0",
     "@radix-ui/react-label": "^2.1.1",
     "@tanstack/react-query": "^5.61.0",
