--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@base-org/account": "^1.1.1",
+    "@base-org/account-ui": "^1.0.1",
     "@farcaster/auth-kit": "^0.8.1",
     "@farcaster/miniapp-core": "^0.3.6",
     "@farcaster/miniapp-node": "^0.1.6",
