--- a/package.json
+++ b/package.json
@@ -4,43 +4,42 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
-    "build": "next build",
+    "build": "next build --turbo",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@base-org/account": "^1.1.1",
+    "@base-org/account": "^2.0.0",
     "@base-org/account-ui": "^1.0.1",
     "@farcaster/auth-kit": "^0.8.1",
-    "@farcaster/miniapp-core": "^0.3.6",
-    "@farcaster/miniapp-node": "^0.1.6",
-    "@farcaster/miniapp-sdk": "^0.1.7",
+    "@farcaster/miniapp-core": "^0.3.7",
+    "@farcaster/miniapp-node": "^0.1.7",
+    "@farcaster/miniapp-sdk": "^0.1.8",
     "@farcaster/miniapp-wagmi-connector": "^1.0.0",
     "@radix-ui/react-label": "^2.1.1",
     "@tanstack/react-query": "^5.61.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.469.0",
-    "next": "15.4.2",
-
+    "next": "15.4.6",
     "ox": "^0.4.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.33.2",
     "wagmi": "^2.16.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/node": "^24.2.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "eruda": "^3.4.3",
     "eslint": "^8",
-    "eslint-config-next": "15.4.2",
+    "eslint-config-next": "15.4.6",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "packageManager": "yarn@1.22.22"
+  "packageManager": "npm@11.4.2"
 }
