--- a/package.json
+++ b/package.json
@@ -9,37 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@base-org/account": "^2.0.0",
+    "@base-org/account": "^2.0.2",
     "@base-org/account-ui": "^1.0.1",
     "@farcaster/auth-kit": "^0.8.1",
-    "@farcaster/miniapp-core": "^0.3.7",
-    "@farcaster/miniapp-node": "^0.1.7",
-    "@farcaster/miniapp-sdk": "^0.1.8",
+    "@farcaster/miniapp-core": "^0.3.8",
+    "@farcaster/miniapp-node": "^0.1.8",
+    "@farcaster/miniapp-sdk": "^0.1.9",
     "@farcaster/miniapp-wagmi-connector": "^1.0.0",
-    "@radix-ui/react-label": "^2.1.1",
-    "@tanstack/react-query": "^5.61.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@tanstack/react-query": "^5.85.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.469.0",
-    "next": "15.4.6",
-    "ox": "^0.4.2",
+    "lucide-react": "^0.542.0",
+    "next": "15.5.2",
+    "ox": "^0.9.4",
     "react": "19.1.1",
     "react-dom": "19.1.1",
-    "tailwind-merge": "^2.6.0",
+    "siwe": "^3.0.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
-    "viem": "^2.33.2",
-    "wagmi": "^2.16.0"
+    "viem": "^2.37.1",
+    "wagmi": "^2.16.9"
   },
   "devDependencies": {
-    "@types/node": "^24.2.0",
-    "@types/react": "^19.1.9",
-    "@types/react-dom": "^19.1.7",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "eruda": "^3.4.3",
-    "eslint": "^8",
-    "eslint-config-next": "15.4.6",
+    "eslint": "^9",
+    "eslint-config-next": "15.5.2",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "packageManager": "npm@11.4.2"
+  "packageManager": "npm@11.5.2"
 }
