--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@farcaster/miniapp-wagmi-connector": "^1.0.0",
     "@radix-ui/react-label": "^2.1.7",
     "@tanstack/react-query": "^5.85.9",
+    "@worldcoin/mini-apps-ui-kit-react": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "iconoir-react": "^7.11.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "ox": "^0.9.4",
