--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -2,5 +2,18 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc = "0.8.20"
+optimizer = true
+optimizer_runs = 200
+via_ir = false
+verbosity = 0
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
+
+[rpc_endpoints]
+baseSepolia = "https://sepolia.base.org"
+baseMainnet = "https://mainnet.base.org"
+
+[etherscan]
+baseSepolia = { key = "${BASESCAN_API_KEY}", url = "https://api-sepolia.basescan.org/api" }
+baseMainnet = { key = "${BASESCAN_API_KEY}", url = "https://api.basescan.org/api" }
