--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@farcaster/miniapp-sdk": "^0.2.0",
     "@farcaster/miniapp-wagmi-connector": "^1.0.0",
     "@radix-ui/react-label": "^2.1.7",
+    "@supabase/supabase-js": "^2.75.1",
     "@tanstack/react-query": "^5.85.9",
     "@worldcoin/mini-apps-ui-kit-react": "^1.3.4",
     "class-variance-authority": "^0.7.1",
