--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "@types/node": "^24.3.0",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
+    "@wagmi/cli": "^2.7.0",
     "eruda": "^3.4.3",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
