--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,12 @@
     "iconoir-react": "^7.11.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
+    "next-themes": "^0.4.6",
     "ox": "^0.9.4",
     "react": "19.1.1",
     "react-dom": "19.1.1",
     "siwe": "^3.0.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "viem": "^2.37.1",
