chore: remove resolver

--- a/xmtp-chatbot/.env.example
+++ b/xmtp-chatbot/.env.example
@@ -2,3 +2,4 @@ XMTP_WALLET_KEY= # the private key of the wallet
 XMTP_DB_ENCRYPTION_KEY= # a second random 32 bytes encryption key for local db encryption
 XMTP_ENV=dev # local, dev, production
 
+NEYNAR_API_KEY=
